# bonesdeploy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cargo-e2e  compile.sh  diagnose-next.sh
.cargo/: config.toml
crates/bonesdeploy/: Cargo.toml
crates/bonesinfra/: Cargo.toml
crates/bonesremote/: Cargo.toml
crates/bonesremote/hooks/: post-receive
crates/bonesremote/src/: config.rs  landlock.rs  main.rs  permissions.rs  privileges.rs  release_state.rs
crates/bonesremote/src/cli/: args.rs  dispatch.rs
crates/bonesremote/src/commands/: activate_release.rs  deploy.rs  deploy_output.rs  doctor.rs  doctor_site.rs  doctor_tests.rs  drop_failed_release.rs  hook.rs  init.rs  landlock_exec.rs  landlock_nginx.rs  manage.rs  mod.rs  post_deploy.rs  post_receive.rs  release_build.rs  release_checkout.rs  release_kill.rs  release_prepare.rs  rollback.rs  service.rs  site.rs  stage_release.rs  status.rs  version.rs  wire_release.rs  wire_shared.rs
crates/bonesremote/src/commands/doctor/: apparmor.rs  mod.rs  site.rs  system.rs
crates/bonesremote/src/commands/release/: kill.rs  list.rs  mod.rs  prune.rs
crates/bonesremote/src/commands/tests/: test_doctor.rs
crates/bonesremote/src/release/: mod.rs  scripts.rs  state.rs
crates/bonesremote/src/release/lifecycle/: activate.rs  mod.rs  prepare.rs  stage.rs  wire_shared.rs
crates/bonesremote/src/release/script_runner/: build.rs  build_bootstrap.sh  mod.rs  output.rs  prepare.rs
crates/bonesremote/src/release/scripts/: build.rs  mod.rs
crates/gitbones/: Cargo.toml
crates/gitbones-remote/: Cargo.toml
crates/gitbones-remote/src/: config.rs  permissions.rs  release_state.rs
crates/gitbones-remote/src/commands/: activate_release.rs  cleanup_failed_release.rs  doctor.rs  init.rs  mod.rs  post_deploy.rs  pre_deploy.rs  prepare_release.rs  prime_release.rs  rollback.rs  version.rs  wire_release.rs
crates/gitbones/src/: config.rs  embedded.rs  git.rs  main.rs  prompts.rs  ssh.rs
crates/gitbones/src/commands/: doctor.rs  init.rs  mod.rs  push.rs  rollback.rs  version.rs
crates/shared/: Cargo.toml
docker/: Dockerfile  docker-compose.yml
docs/: CLI_OUTPUT_COPY.md  CLI_UX_PLAN.md  LANDLOCK_RUNTIME_PLAN.md  PROJECT.md  RELEASE_DEPLOY_PLAN.md  ROLLBACK_PLAN.md  ansible-refactor.md  architecture-rehaul-plan.md  bonesinfra-implementation.md  bonesinfra-verification.md  build-container-corrections.md  build-container-plan.md  future.md  goal.md  linux_app_isolation_security_policy.md  pyinfra-runtime-plan.md  refactor-code.md  security-report.md  slop-refactor.md  todo.md
docs/archive/: LANDLOCK_RUNTIME_PLAN.md  ROLLBACK_PLAN.md  SecurityPolicy.md
docs/changes/: apparmor.md
docs/logs/: lawsnipe-issue.md
docs/plans/: RELEASE_DEPLOY_PLAN.md  build-user.md
docs/refactors/: cowards_code_audit.md
docs/references/: bonesinfra.md
docs/security/: 01-threat-model.md  02-filesystem-layout.md  03-identity-and-user-policy.md  04-systemd-service-hardening.md  05-apparmor-policy.md  06-landlock-policy.md  07-cgroups-and-resource-isolation.md  08-seccomp-policy.md  09-network-isolation-policy.md  10-secrets-policy.md  11-web-server-policy.md  12-database-and-local-service-policy.md  13-deployment-and-build-worker-policy.md  14-containers-and-docker-policy.md  15-ssh-policy.md  16-logging-and-observability-policy.md  17-backup-policy.md  18-package-manager-and-runtime-policy.md  19-agent-audit-checklist.md  20-severity-guide.md  21-acceptable-exceptions.md  22-desired-end-state-summary.md
docs/thinking/: 02_new_architecture_approach.md  03_bonesdeploy_bonesremote_concerns.md  (+1 more)
e2e/: Cargo.toml  README.md  pack.sh  unpack.sh
e2e/fixtures/: .gitignore  django.md  laravel.md  next.md  nuxt.md  rails.md  svelte.md  vue.md
e2e/src/: build.rs  container.rs  image.rs  incus.rs  lib.rs  project.rs  session.rs
e2e/tests/: setup.rs
e2e/tests/setup/: harness.rs  laravel.rs  next.rs  nuxt.rs  vue.rs
infra/: .gitignore  main.py  runtime.py  setup.py  ssl.py  utils.py
kit/: bones.toml  bones.yaml  hooks.sh
tests/: ASSERTIONS.md
(+544 files in other folders)
