[package]
name = "e2e"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.103"
ctor = "1.0.10"
dtor = "1.0.5"
mdpack = "0.1.2"
serde_json = "1.0.150"

[lints.clippy]
# Test harness: keep the hard-failure lints, skip the API-documentation ones.
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
