[package]
name = "gitbones"
version = "0.1.1"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
git2 = "0.20"
inquire = "0.7"
openssh = { version = "0.11", features = ["native-mux"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8"
